-XX:-UseCompactObjectHeaders not supported in JDK 21